# multiup-cli

./: .gitignore  CMakeLists.txt  Config.h  Makefile  README.md  colors_in_the_shell.cpp  colors_in_the_shell.h  main.cpp  mainClass.cpp  mainClass.h  multiup_cli.pro  script_cmake.bat
debian_package/: .gitignore  CMakeLists.txt  build_deb_package.sh
debian_package/multiup-cli/DEBIAN/: control  copyright  md5sums  postrm
debian_package/multiup-cli/usr/share/locale/en_GB/LC_MESSAGES/: multiup_cli.mo
docs/: compilation.txt
internationalization/: Makefile  english.po  multiup-cli.mo  multiup-cli.pot  multiup_cli.pot
